# Expression

./: CMakeLists.txt  CMakePresets.json  CmakeLists.txt  Makefile  Readme.md  differentiator.cpp  main.cpp
Expression/: CMakeLists.txt  Expression.cpp  Expression.hpp
include/: AST.hpp  ExprType.hpp  Expression.hpp
src/: Expression.cpp
test/: test.cpp
